Update build scripts